tests/baselines/reference/decoratorOnClassProperty1(strict=true).errors.txt
decoratorOnClassProperty1.ts(4,10): error TS7008: Member 'prop' implicitly has an 'any' type.


==== decoratorOnClassProperty1.ts (1 errors) ====
    declare function dec(target: any, propertyKey: string): void;
    
    class C {
        @dec prop;
             ~~~~
!!! error TS7008: Member 'prop' implicitly has an 'any' type.
    }